# mcp-context-bridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DESIGN.md
tests/test_connectors/: test_integration.py
