[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-bridge"
version = "0.1.0"
description = "Unified context layer connecting local data to LLMs via MCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "paramiko>=3.4.0",
    "watchdog>=4.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "cachetools>=5.3.0",
    "python-frontmatter>=1.0.0",
    "rich>=13.0.0",
    "psycopg[binary]>=3.1.0",
    "docker>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "respx>=0.21.0",
]

[project.scripts]
context-bridge = "context_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/context_bridge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

