[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-bridge"
version = "0.1.0"
description = "Unified context layer connecting local data to LLMs via MCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "mcp",
    "llm",
    "context",
    "obsidian",
    "github",
    "postgresql",
    "docker",
    "ssh",
    "mcp-server",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "paramiko>=3.4.0",
    "watchdog>=4.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "cachetools>=5.3.0",
    "python-frontmatter>=1.0.0",
    "rich>=13.0.0",
    "psycopg[binary]>=3.1.0",
    "docker>=7.0.0",
    "starlette>=0.37.0",
    "sse-starlette>=2.0.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "respx>=0.21.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/Codinglone/context-bridge"
Repository = "https://github.com/Codinglone/context-bridge"
Documentation = "https://github.com/Codinglone/context-bridge#readme"
Issues = "https://github.com/Codinglone/context-bridge/issues"

[project.scripts]
context-bridge = "context_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/context_bridge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
warn_unused_ignores = true

# Third-party libraries without complete type stubs
[[tool.mypy.overrides]]
module = ["paramiko.*", "docker.*", "watchdog.*", "frontmatter.*", "mcp.*"]
ignore_missing_imports = true
follow_imports = "skip"

# Connector modules use untyped third-party APIs
[[tool.mypy.overrides]]
module = ["context_bridge.connectors.*", "context_bridge.server"]
disallow_untyped_defs = false
disallow_untyped_calls = false
check_untyped_defs = false
warn_return_any = false
disable_error_code = ["call-overload", "misc", "union-attr", "type-arg", "var-annotated", "untyped-decorator", "arg-type"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

